Se hace un cambio de texto en la master

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <h1>Esta es la Rama maestra</h1>
+  <h1>Esta es la Rama maestra del index</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat suscipit, eligendi ex facere quaerat dolore unde quod quae molestias atque, eveniet tempora iusto dicta dolorum inventore accusantium asperiores ab quisquam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex ab aut iure temporibus quasi architecto. Repellendus blanditiis nostrum culpa earum aperiam eum obcaecati laborum ipsam assumenda magni sint nobis, corrupti?</p>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat suscipit, eligendi ex facere quaerat dolore unde quod quae molestias atque, eveniet tempora iusto dicta dolorum inventore accusantium asperiores ab quisquam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex ab aut iure temporibus quasi architecto. Repellendus blanditiis nostrum culpa earum aperiam eum obcaecati laborum ipsam assumenda magni sint nobis, corrupti?</p>
